--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
-unstructured[all-docs]
+ipykernel
 langchain_community
-langchain-openai
-langchain-text-splitters 
+python-dotenv
+langchain_groq
+bs4
+sentence_transformers
+faiss-cpu
+pypdf
+fastapi
+streamlit
+langserve
+uvicorn
+chromadb
+pyPDF2
+unstructured[all-docs]
 tiktoken
-streamlit 
-faiss-cpu 
 langchainhub
 
 
